# PFFT_Brush_method

./: LICENSE  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
debug/: Makefile.am  Makefile.in
debug/.deps/: NNLS.Po  alignSet.Po  bestFitScaling.Po  betaHist.Po  betaPostProcess.Po  beta_util.Po  dcd.Po  deuterate.Po  deuteration.Po  fast_dg.Po  genScatteringLengths.Po  histCollect.Po  input.Po  util.Po
example/: dppc_dfpc.psf  example.qvals  gen_br.inp  gen_bz.inp  lat.inp  pfft.inp  run.csh  scattering_lengths.txt
optimized/: Makefile.am  Makefile.in
optimized/.deps/: bfile.Po  dg_dcd.Po  hs.Po  pdb.Po  spline.Po
src/: NNLS.C  bestFitScaling.C  betaHist.C  betaPostProcess.C  beta_util.C  beta_util.h  bfile.c  bfile.h  dcd.C  dcd.h  deuterate.C  deuteration.C  deuteration.h  dg_dcd.c  dg_dcd.h  fast_dg.c  fit_control.h  genScatteringLengths.C  genbetaz.c  genbetaz_center.c  histCollect.C  hs.C  hs.h  input.C  input.h  pdb.C  pdb.h  psf_b.c  psf_b.h  spline.C  util.C  util.h
